# syn-kw

./: Main.hs  syn-kw.cabal
